# 09-ffi

./: .gitattributes  Cargo.toml  Makefile  README.md  index.d.ts  index.js
.cargo/: config.toml
algo/: Cargo.toml
algo/src/: algo.rs  lib.rs  matrix.rs
node-binding/: Cargo.toml  index.d.ts  index.js  package.json
node-binding/.yarn/releases/: yarn-4.2.2.cjs
node-binding/src/: algo.rs  lib.rs
python-binding/: .gitignore  Cargo.toml  README.md  pyproject.toml
python-binding/python/algo/: __init__.py
python-binding/src/: hasher.rs  lib.rs  matrix.rs
src/: algo.rs  lib.rs
