[project]
name = "algo"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Tyr Chen", email = "tyr.chen@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.0",
    "ipython>=8.25.0",
]

[tool.maturin]
python-source = "python"
module-name = "algo._lowlevel"
features = ["pyo3/extension-module"]
